--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ endorsed.classpath=
 excludes=
 file.reference.java-util-1.3.1.jar=C:\\Users\\boura\\Downloads\\java-util-1.3.1.jar
 file.reference.javax.mail.jar=C:\\Users\\boura\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\Nesrine\\Downloads\\javax.mail.jar
 file.reference.json-20160810.jar=C:\\Users\\boura\\Downloads\\json-20160810.jar
 file.reference.native-internal_tmp=native/internal_tmp
 file.reference.CLDC11.jar=lib/CLDC11.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.java-util-1.3.1.jar}:\
     ${file.reference.json-20160810.jar}:\
-    ${file.reference.org.osgi.foundation-1.0.0.jar}
+    ${file.reference.org.osgi.foundation-1.0.0.jar}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
